# para-edit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  vcpkg.json
include/para-edit/: ecs.hpp  logger.hpp
include/para-edit/core/: Application.hpp  GraphicsDevice.hpp  Logger.hpp  Window.hpp  math.hpp
include/para-edit/ecs/: ComponentManager.hpp  ComponentSerialiser.hpp  EntityManager.hpp  Scene.hpp  SystemManager.hpp  components.hpp  types.hpp
include/para-edit/ecs/systems/: HierarchySystem.hpp
include/para-edit/editor/: CommandManager.hpp  Editor.hpp  View.hpp  ViewManager.hpp  commands.hpp  theme.hpp
include/para-edit/editor/views/: HierarchyView.hpp  InspectorView.hpp  LogView.hpp  SceneView.hpp
src/: .gitignore  main.cpp
src/core/: Application.cpp  GraphicsDevice.cpp
src/ecs/: EntityManager.cpp
src/ecs/systems/: HierarchySystem.cpp
src/editor/: Editor.cpp
src/editor/views/: HierarchyView.cpp  InspectorView.cpp  LogView.cpp
